Fix scrolling on mobile

--- a/assets/sass/landing-page.scss
+++ b/assets/sass/landing-page.scss
@@ -58,6 +58,7 @@ html, body {
   left: 0;
   right: 0;
   overflow: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 .page-header {
@@ -157,6 +158,7 @@ html, body {
   z-index: 2;
   top: 0;
   left: 0;
+  -webkit-transform-style: preserve-3d;
 
   &:before {
     content: '';
@@ -200,6 +202,7 @@ html, body {
   right: 0;
   text-align: center;
   z-index: 3;
+  -webkit-transform-style: preserve-3d;
 
   .btn {
     line-height: 3.1;
